✨ Adiciona endpoints (/, /yearswinners, /year, /awardsinterval)